:art: Avoiding cropped emojis in chat messages

--- a/src/resources/css/common/Chat.css
+++ b/src/resources/css/common/Chat.css
@@ -71,7 +71,7 @@ ChatMessagePanel #labelMessage
     selection-color: white;
     padding: 0px;
     margin: 0px;
-    margin-top: -6px;
+    margin-top: -3px;
 }
 
 /* emoji buttons */
